--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-587.3KB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-794.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1.57MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-295.0KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-6.24MB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-1.44MB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-453.0KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-587.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-587.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-587.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-587.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-587.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-587.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-587.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
       - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
