--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-794.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-295.0KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-6.24MB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-1.44MB/s(Youtube:不良林), server: 36.134.154.119, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇨🇳 中国-1.98MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇦 加拿大-762.4KB/s(Youtube:不良林), server: 72.140.224.195, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.10MB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
   - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-453.0KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-284.6KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
   - {name: 🇯🇵 日本-386.6KB/s(Youtube:不良林), server: 194.156.231.237, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-340.0KB/s(Youtube:不良林), server: 89.31.126.31, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-794.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-295.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-762.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.10MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-340.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
